<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:background="@color/backgroundApp"
    android:paddingVertical="16dp"
    tools:context=".imcalculator.ImcCalculatorActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/viewFemale"
        app:cardBackgroundColor="@color/background_color_secelect_buttom">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:gravity="center">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:tint="@color/white"
            android:src="@drawable/ic_male"
            android:layout_marginBottom="6dp">
        </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hombre"
                android:textColor="@color/white"
                android:textAllCaps="true">
            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewMale"
        app:cardBackgroundColor="@color/background_color_unselected_buttom">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView

            android:layout_width="60dp"
            android:layout_height="60dp"
            app:tint="@color/white"
            android:src="@drawable/ic_female">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/mujer"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_height="wrap_content">

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/altura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/background_color_unselected_buttom">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:textAllCaps="true"
                android:textColor="@color/white">

            </TextView>

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 cm"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold">

            </TextView>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="200">


            </com.google.android.material.slider.RangeSlider>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/peso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/altura"
        app:layout_constraintEnd_toStartOf="@+id/edad"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/background_color_unselected_buttom"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/peso">
            </TextView>

            <TextView
                android:id="@+id/tvPesoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="60"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="50sp">

            </TextView>

           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:orientation="horizontal">

               <com.google.android.material.floatingactionbutton.FloatingActionButton

                   android:id="@+id/btnSumarPeso"
                   app:backgroundTint="@color/background_button"
                   android:layout_width="wrap_content"
                   android:src="@drawable/ic_mas"
                   android:layout_marginRight="16dp"
                   android:layout_height="wrap_content">


               </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton

                    android:id="@+id/btnRestarPeso"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_menos"
                    app:backgroundTint="@color/background_button"
                    android:layout_height="wrap_content">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>
           </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/edad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/background_color_unselected_buttom"
        app:layout_constraintTop_toBottomOf="@+id/altura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/peso">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad">

        </TextView>

        <TextView
            android:id="@+id/tvEdadValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="60"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="50sp">

        </TextView>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSumarEdad"
                android:layout_width="wrap_content"

                app:backgroundTint="@color/background_button"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_mas"
                android:layout_height="wrap_content">
            </com.google.android.material.floatingactionbutton.FloatingActionButton>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnRestarEdad"
                android:layout_width="wrap_content"
                app:backgroundTint="@color/background_button"
                android:src="@drawable/ic_menos"
                android:layout_height="wrap_content">

            </com.google.android.material.floatingactionbutton.FloatingActionButton>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="24sp"

        android:textStyle="bold"
        android:text="@string/calculo"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/background_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="80dp">

    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>